update dockerfile and package and add nginx.config

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --watchAll=false --silent",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
